[lib]
proc-macro = true
path = "./mod.rs"

[package]
name = "tokio-utils-proc-macro"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

[dependencies]
# lazy_static = "1.3.0"
proc-macro2 = "0.4.30"
proc-macro-crate = "0.1.4"
proc-macro-hack = "0.5.8"
# quote = "0.6.13"
proc-quote = "0.2.2"
syn = { version = "0.15.42", features = [ "full" ] }
